웹크롤링과 OpenAI

--- a/Source/01_python/ch07_객체지향 프로그래밍.ipynb
+++ b/Source/01_python/ch07_객체지향 프로그래밍.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "id": "373081c3",
    "metadata": {},
    "outputs": [
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 2,
    "id": "c3063f04",
    "metadata": {},
    "outputs": [
@@ -99,7 +99,7 @@
       "MBC의 홍길동님은 남자입니다\n",
       "MBC의 홍홍홍님은 여자입니다\n",
       "MBC의 홍길동님은 남자입니다\n",
-      "<__main__.Person object at 0x0000022595477130>\n"
+      "<__main__.Person object at 0x000001923C430370>\n"
      ]
     }
    ],
